<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">USM Survival Kit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="building">Buildings</string>
    <string name="desa">Desasiswa</string>
    <string name="school">School</string>
    <string name="hall">Lecture Hall (Dewan Kuliah)</string>
    <string name="troom">Tutorial Room (Bilik Tutorial)</string>
    <string name="bus">Bus Stop</string>
    <string name="rroute">Route A</string>
    <string name="broute">Route B</string>
    <string name="yroute">Route C</string>
    <string name="proute">Route D</string>
    <string name="clear">Reset</string>
    <string name="title_activity_prefs">Prefs</string>
    <string name="block">Blocks</string>
    <string name="place">HH</string>
    <string name="gps">My location</string>
    <string name="home">Home</string>
    <string name="advertisement">Advertisement</string>

    <string-array name="shortcut">
        <item>@string/home</item>
        <item>@string/title_activity_map</item>
        <item>@string/advertisement</item>
    </string-array>

    <string name="title_activity_map_low">Map</string>
    <string name="hello_world">Hello world!</string>

</resources>
